<resources>
    <string name="app_name">My Application</string>
    <string name="start_text">Translator</string>
    <string name="toolbar_text">Кириллица - Latynsha</string>
    <string name="toolbar_translator">Audary</string>
    <string name="toolbar_lovely">Unaǵandar tіzіmі</string>
    <string name="edit_text_hint">Введите текст</string>
    <string name="menu_send_avtor">Avtorga hat jazy</string>
    <string name="menu_qosymshamen_bolisu">Qosymshamen bolisu</string>
    <string name="menu_magan_kosymsha_kerek">Magan kosymsha kerek</string>
    <string name="main_btn">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_copy_text">Kóshіrý</string>
    <string name="menu_share_text">Bólіsý</string>
    <string name="menu_delete_text">Óshіrý</string>
    <string name="menu_favorite_text">Unaǵandar tіzіmіne qosý</string>
</resources>