<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:elevation="1dp"
    android:background="@drawable/dw_menu_dialog"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu_ui.MenuDialogFragment">

    <ImageView
        android:id="@+id/menu_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_copy"
        android:contentDescription="menu_copy"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_copy_text"
        app:layout_constraintStart_toEndOf="@id/menu_copy"
        android:layout_marginStart="15dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/menu_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu_copy"
        android:layout_marginTop="12dp"
        android:src="@drawable/icon_share"
        android:contentDescription="menu_share"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_share_text"
        app:layout_constraintTop_toBottomOf="@id/text_copy"
        app:layout_constraintStart_toEndOf="@id/menu_share"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/menu_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu_share"
        android:layout_marginTop="12dp"
        android:src="@drawable/send_to_trash_1"
        android:contentDescription="menu_delete"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_delete_text"
        app:layout_constraintTop_toBottomOf="@id/text_share"
        app:layout_constraintStart_toEndOf="@id/menu_delete"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/menu_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu_delete"
        android:layout_marginTop="12dp"
        android:src="@drawable/favorite"
        android:contentDescription="menu_favorite"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_favorite_text"
        app:layout_constraintTop_toBottomOf="@id/text_delete"
        app:layout_constraintStart_toEndOf="@id/menu_favorite"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>